# clarity

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/clarity/: __init__.py
typst/clarity/: frontmatter.typ  main.typ  metadata.typ  theme.typ
typst/clarity/chapters/: ch01-principles.typ  ch01-python-foundations.typ  ch02-python-features.typ  ch03-collaborative-dev.typ  ch04-production-practices.typ
