[project]
name = "clarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ranajoy Banerji", email = "14226544+ranajoy-cosmo@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
clarity = "clarity:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
